fix loading indicator on mobile Closes #31
LGTM given by: @timraasveld

Squashed commit of the following:

commit b491713020ca474dc9b4d3631e7a61c10145366b
Author: Hester van Wijk <h.j.van.wijk@roqua.nl>
Date:   Mon Aug 8 15:34:48 2016 +0200

    removed .item for mobile styling

--- a/app/assets/stylesheets/_loading_indicator.sass
+++ b/app/assets/stylesheets/_loading_indicator.sass
@@ -72,28 +72,27 @@
 
 @media only screen and (max-width: $breakpoint-mobile)
   .feed
-    .item
-      .loading-indicator-inner
-        padding: 0
-        label
-          &:nth-child(6)
-            -webkit-animation: loading-indicator 2s infinite ease-in-out
-            animation: loading-indicator 2s infinite ease-in-out
-          &:nth-child(5)
-            -webkit-animation: loading-indicator 2s 100ms infinite ease-in-out
-            animation: loading-indicator 2s 100ms infinite ease-in-out
-          &:nth-child(4)
-            -webkit-animation: loading-indicator 2s 200ms infinite ease-in-out
-            animation: loading-indicator 2s 200ms infinite ease-in-out
-          &:nth-child(3)
-            -webkit-animation: loading-indicator 2s 300ms infinite ease-in-out
-            animation: loading-indicator 2s 300ms infinite ease-in-out
-          &:nth-child(2)
-            -webkit-animation: loading-indicator 2s 400ms infinite ease-in-out
-            animation: loading-indicator 2s 400ms infinite ease-in-out
-          &:nth-child(1)
-            -webkit-animation: loading-indicator 2s 500ms infinite ease-in-out
-            animation: loading-indicator 2s 500ms infinite ease-in-out
+    .loading-indicator-inner
+      padding: 0
+      label
+        &:nth-child(6)
+          -webkit-animation: loading-indicator 2s infinite ease-in-out
+          animation: loading-indicator 2s infinite ease-in-out
+        &:nth-child(5)
+          -webkit-animation: loading-indicator 2s 100ms infinite ease-in-out
+          animation: loading-indicator 2s 100ms infinite ease-in-out
+        &:nth-child(4)
+          -webkit-animation: loading-indicator 2s 200ms infinite ease-in-out
+          animation: loading-indicator 2s 200ms infinite ease-in-out
+        &:nth-child(3)
+          -webkit-animation: loading-indicator 2s 300ms infinite ease-in-out
+          animation: loading-indicator 2s 300ms infinite ease-in-out
+        &:nth-child(2)
+          -webkit-animation: loading-indicator 2s 400ms infinite ease-in-out
+          animation: loading-indicator 2s 400ms infinite ease-in-out
+        &:nth-child(1)
+          -webkit-animation: loading-indicator 2s 500ms infinite ease-in-out
+          animation: loading-indicator 2s 500ms infinite ease-in-out
 
   @keyframes loading-indicator
     0%
